mesclagem de linhas e colunas em tabelas

--- a/Modulo 3/Ex023/html/tabela2.html
+++ b/Modulo 3/Ex023/html/tabela2.html
@@ -9,11 +9,12 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Posição</th>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Posição</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
         <tbody>
@@ -155,8 +156,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>ANO 2024</th>
-                <th>Total de Habitantes</th>
+                
+                <th scope="row" colspan="2">Total de Habitantes</th>
                 <th id=""><strong>220.147.125</strong></th>
             </tr>
         </tfoot>
