--- a/Modulo 4/Ex024/html/iframe.html
+++ b/Modulo 4/Ex024/html/iframe.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo de Iframe</title>
+    <link rel="stylesheet" href="../css/iframe.css">
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
-    <p>Acesse o perfil do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> no youtube</p>
+    <p>Acesse o perfil do <iframe src="https://www.cursoemvideo.com" frameborder="0" scolling="yes";><a href="https://www.cursoemvideo.com">está mensagem só abrirá se o navegador não for compativel com o iframe</a></iframe> no youtube</p>
+
 </body>
 </html>
