iframe com paginas próprias

--- a/Modulo 4/Ex025/html/iframe.html
+++ b/Modulo 4/Ex025/html/iframe.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>iframe</title>
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
-    
+    <h1>Teste de Iframe</h1>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat libero asperiores magnam expedita rem natus aliquam, nesciunt fugit corrupti labore minus commodi excepturi velit nam quia suscipit, nisi neque voluptatum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor reiciendis, debitis tenetur, cumque, voluptatum ipsam optio quia suscipit nesciunt a quam ad sed fugit veniam maiores eligendi dicta aspernatur quod?</p>
+
+    <iframe src="pag.html" frameborder="0"></iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, error nesciunt! Deleniti est, quisquam aliquam provident tenetur ad optio quidem aspernatur quia porro eos iure dignissimos, consequatur recusandae neque repudiandae! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis obcaecati explicabo nam aut? Minima quod dolores cupiditate enim asperiores ea aliquam incidunt ducimus provident id eaque corrupti, labore earum fugiat!</p>
 </body>
 </html>
