--- a/Modulo 4/Ex027/mq005/html/index.html
+++ b/Modulo 4/Ex027/mq005/html/index.html
@@ -6,8 +6,9 @@
     <title>media query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
@@ -39,6 +40,14 @@
         <p>Escrito por <a href="https://github.com/Luis-Edu01" target="_blank">Luís Eduardo</a></p>
     </footer>
     <script>
+        function mudouTamanho(){
+            if(window.innerWidth >= 768){
+                itens.style.display = 'block'
+            }
+            else{
+                itens.style.display = 'none'
+            }
+        }
         function clickMenu(){
             if(itens.style.display == 'block'){
                 itens.style.display = 'none'
